// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "
<h3><strong>В каких режимах заряжается электромобиль</strong></h3>\\\\n<p>Чтобы зарядить батарею, недостаточно просто соединить её проводами с источником электри&shy;чества.</p>
\\\\n<p><strong>Mode 1</strong> — это прямое соединение с бытовой электро&shy;сетью</p>
" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>Чтобы зарядить батарею, недостаточно просто соединить её проводами с источником электри&shy;чества.</p><p><strong>Mode 1</strong> — это прямое соединение с бытовой электро&shy;сетью</p>",
  },
  "name": "В каких режимах заряжается электромобиль",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "<h2><span>Header</span></h2><p><span class=\\"content\\">Content 2</span></p><p class=\\"content\\">Content 3</p>" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p><span class=\\"content\\">Content 2</span></p><p class=\\"content\\">Content 3</p>",
  },
  "name": "Header",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "<h2><span>Header</span></h2><p>Content 2</p>" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>Content 2</p>",
  },
  "name": "Header",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "<h2><span>Header</span></h2><p>Content 2</p><p>Content 3</p>" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>Content 2</p><p>Content 3</p>",
  },
  "name": "Header",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "<h2>Header</h2><p>Content 2</p>" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>Content 2</p>",
  },
  "name": "Header",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "<h3><strong>В каких режимах заряжается электромобиль</strong></h3><p>Чтобы зарядить батарею, недостаточно просто соединить её проводами с источником электри&shy;чества.</p><p><strong>Mode 1</strong> — это прямое соединение с бытовой электро&shy;сетью</p>" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>Чтобы зарядить батарею, недостаточно просто соединить её проводами с источником электри&shy;чества.</p><p><strong>Mode 1</strong> — это прямое соединение с бытовой электро&shy;сетью</p>",
  },
  "name": "В каких режимах заряжается электромобиль",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "<h3><strong>В чём особенности зарядки электромобиля</strong></h3><p>При заправке обычного автомобиля главное правило — выбрать проверенную АЗС.</p>" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>При заправке обычного автомобиля главное правило — выбрать проверенную АЗС.</p>",
  },
  "name": "В чём особенности зарядки электромобиля",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "<h3>Header</h3><p>Content 2</p>" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>Content 2</p>",
  },
  "name": "Header",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, если передан "<h4>Header</h4><p>Content 2</p>" 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>Content 2</p>",
  },
  "name": "Header",
}
`;

exports[`Autoru post schema question markup generator getMarkup Возвращает микроразметку вопроса, не учитывая переносы строк 1`] = `
Object {
  "acceptedAnswer": Object {
    "text": "<p>Content 2</p>",
  },
  "name": "Header",
}
`;
